--- a/theme/style.css
+++ b/theme/style.css
@@ -2,6 +2,6 @@ html, body {
   margin: 0;
   border: 0;
   font-size: 100%;
-  background-color: #096375;
-  color: #15bd0c;
+  background-color: #4d9eae;
+  color: #d1dcd1;
 }
