Generate Pelican site

--- a/theme/style.css
+++ b/theme/style.css
@@ -2,6 +2,6 @@ html, body {
   margin: 0;
   border: 0;
   font-size: 100%;
-  background-color: #4d9eae;
-  color: #d1dcd1;
+  background-color: #d6dadb;
+  color: #000400;
 }
