--- a/templates/mytheme/static/style.css
+++ b/templates/mytheme/static/style.css
@@ -2,6 +2,6 @@ html, body {
   margin: 0;
   border: 0;
   font-size: 100%;
-  background-color: #096375;
-  color: #15bd0c;
+  background-color: #d6dadb;
+  color: #000400;
 }
